# agb-sdk

./: .cz.toml  .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: PUBLISH.md
src/agb-sdk/core/dtos/: biotrop_bioindex.py
src/agb_sdk/core/dtos/: __init__.py  analysis.py  locale.py
src/agb_sdk/core/entities/: analysis.py
src/agb_sdk/core/use_cases/: convert_bioindex_to_tabular.py
src/agb_sdk/ports/cli/: main.py
src/tests/: test_dtos.py
src/tests/mock/: customer-record.jsonc  expected-bioidnex-data.jsonc
