[project]
name = "agrobiota-sdk"
version = "0.1.0-alpha.0"
description = "An official SDK library for the AGROBIOTA environment"
authors = [
    {name = "BIOTROP Bioinformatics Team",email = "bioinfo@biotrop.com.br"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
