[project]
name = "agrobiota-sdk"
version = "0.1.0a2"
description = "An official SDK library for the AGROBIOTA environment"
authors = [
    {name = "BIOTROP Bioinformatics Team",email = "bioinfo@biotrop.com.br"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
keywords = ["Bioinformatics", "AGROBIOTA", "SDK"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Other Audience",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "rich-click (>=1.8.9,<2.0.0)"
]

[project.urls]
Homepage = "https://github.com/Biotrop/agb-sdk"

[tool.poetry]
packages = [
    { include = "agb_sdk", from = "src" },
    { include = "tests", from = "src" },
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
commitizen = "^4.8.3"

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# ? ----------------------------------------------------------------------------
# ? Entrypoint
# ? ----------------------------------------------------------------------------

[tool.poetry.scripts]
agb-sdk = "agb_sdk.ports.cli.main:main"

# ? ----------------------------------------------------------------------------
# ? Code consistence
# ? ----------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
exclude = ["build/", "dist/", "docs/", "venv/"]
ignore_missing_imports = true
follow_imports = "normal"
warn_redundant_casts = true
warn_unused_ignores = false
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
namespace_packages = false
disallow_untyped_defs = true

[tool.attrs-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.flake8]
ignore = "E722, W503, E501, E203"
per-file-ignore = "**/__init__.py: F401"
